# gces-extra-2026-1-

./: .env.example  .gitignore  README.md
config/: sources.json
data/fixtures/real_pdfs/: manifest.json
data/test_runtime/0e7733bcf97441d7b1392277e5eb2913/: x.db-journal
data/test_runtime/cbdda3ebff3c48c490e6496cd064d7db/: test.db  test.db-journal
docs/: evaluation_matrix.md
gces_extra-main/: README.md  pyproject.toml
gces_extra-main/config/: sources.example.json
gces_extra-main/data/fixtures/real_pdfs/: validation_output.json
gces_extra-main/docs/: architecture.md  operations.md  validation_report.md
gces_extra-main/src/uda_pipeline/: config.py  db.py
gces_extra-main/src/uda_pipeline/services/: contract.py  extraction.py  fetcher.py  llm.py  periods.py  pipeline.py  sources.py  validation.py
gces_extra-main/tests/: helpers.py  test_db.py
scripts/: run_real_fixture_validation.py
src/uda_pipeline/: api.py  bootstrap.py  worker.py
src/uda_pipeline/domain/: models.py
src/uda_pipeline/services/: catalog.py  chunking.py  extraction.py  ocr.py  pdf_parser.py  pipeline.py  ri_polling.py  validation.py
tests/: test_extraction_robustness.py
