[project]
name = "uda-pipeline"
version = "0.1.0"
description = "Pipeline de UDA para relatorios de RI do setor habitacional."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.4",
  "pymupdf>=1.27.2",
  "pypdf>=4.3.1",
  "python-dateutil>=2.9.0.post0",
  "uvicorn>=0.30.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
